- Added Fizzcrank Spare Parts to the loot table of Defendo-tank 66D for the quests What's the Matter with the Transmatter? and Cleaning Up the Pools.
- Added Fizzcrank Spare Parts to the loot table of Fizzcrank Mechagnome for the quests What's the Matter with the Transmatter? and Cleaning Up the Pools.
- Changed the respawn time of Burblegobble's Bauble.
- Changed the respawn time of Gurgleboggle's Bauble.
- Added Winterfin Clam to the loot table of Winterfin Shorestriker for the quest Winterfin Commerce.
- Added Winterfin Clam to the loot table of Winterfin Oracle for the quest Winterfin Commerce.
- Added Winterfin Clam to the loot table of Winterfin Warrior for the quest Winterfin Commerce.

[2022-04-30]
- Added the script for world gameobjects to make the quest Oh Noes, the Tadpoles! trigger for every member of a group.
- Added the script for Borean Tundra to make the quest Escape from the Winterfin Caverns trigger for every member of a group.

[2022-05-01]
- Added the script for Borean Tundra to make the quest Abduction trigger for every member of a group.
- Added Crystallized Mana Shard to the loot table of Coldarra Mage Slayer for the quest Bait and Switch.
- Changed the flags of Crystallized Mana Shard to allow every member of a group to loot it.

[2022-05-02]
- Added Scarlet Onslaught Armor to the loot table of Onslaught Footman for the quest Materiel Plunder.
- Added Scarlet Onslaught Weapon to the loot table of Onslaught Workman for the quest Materiel Plunder.
- Changed the flags of Onslaught Armor to allow every member of a group to loot it.
- Changed the flags of Onslaught Weapon to allow every member of a group to loot it.
- Added Forgotten Treasure to the loot table of Forgotten Peasant for the quest Funding the War Effort.
- Changed the flags of Forgotten Treasure to allow every member of a group to loot it.